ui/src/pages/plan/rules/Rule.css
.currency-negative {
    color: red;
}

.currency-positive {
    color: black;
}

.ruledescription {
    max-width: 400px;
    border: 1px solid #ddd;
    overflow: hidden;
    border-radius: 5px;
}

.ruledescription:hover {
    background-color: #f8f9fa;
}

.rulename {
    max-width: 300px;
    overflow: hidden;
}

